feat: add user  handler test

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_HOST=
-APP_PORT=
+APP_HOST=localhost
+APP_PORT=3000
 
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASS=
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=gocrud
+DB_USER=shironxn
+DB_PASS=303200
 
-JWT_SECRET=
+JWT_SECRET=303200
