--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "bin"
   bin = "./bin/main"
   cmd = "go build -o ./bin/main ./cmd"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "cmd", "bin"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "cmd", "bin", "docs"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
