--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_HOST=localhost
+APP_HOST=0.0.0.0
 APP_PORT=3000
 
-DB_HOST=app
+DB_HOST=db
 DB_PORT=3306
 DB_NAME=gocrud
 DB_USER=shironxn
-DB_PASS=123456
+DB_PASS=303200
 
-JWT_SECRET=123456
+JWT_SECRET=303200
