--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
-APP_HOST=localhost
+APP_HOST=0.0.0.0
 APP_PORT=3000
 
-DB_HOST=app
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=gocrud
 DB_USER=shironxn
