--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 APP_HOST=0.0.0.0
 APP_PORT=3000
 
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=gocrud
-DB_USER=shironxn
-DB_PASS=303200
+DB_USER=root
+DB_PASS=password
 
-JWT_SECRET=303200
+JWT_SECRET=jwtsecret
