chore: clean code

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,15 @@
 APP_HOST=0.0.0.0
 APP_PORT=3000
+APP_DEV=true #set false or empty for prod
+APP_WEB=http://localhost:3001
 
 DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=gocrud
 DB_USER=root
-DB_PASS=password
+DB_PASS=
+DB_NAME=gocrud
+DB_PORT=5432
 
-JWT_SECRET=jwtsecret
+JWT_ACCESS_SECRET=ACESS
+JWT_REFRESH_SECRET=REFRESH
+
+ 
