chore: docker compose

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,11 +5,11 @@ APP_WEB=http://localhost:3001
 
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=password
 DB_NAME=gocrud
 DB_PORT=5432
 
-JWT_ACCESS_SECRET=ACESS
+JWT_ACCESS_SECRET=ACCESS
 JWT_REFRESH_SECRET=REFRESH
 
  
