--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.17",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
