--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,10 @@
 FROM golang:1.22.2
 
-WORKDIR /app
+WORKDIR /
 
 COPY . .
+
+ENV GO111MODULE=off
 
 RUN go mod tidy
 RUN go build -o bin/main ./cmd
