--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /
 
 COPY . .
 
-ENV GO111MODULE=off
+# ENV GO111MODULE=off
 
-# RUN go mod tidy
+RUN go mod tidy
 RUN go build -o bin/main ./cmd
 
 EXPOSE 8080
