--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,7 +28,7 @@ COPY . .
 ENV GO111MODULE=off
 
 # Build the Go app
-RUN go build -o main .
+RUN go build -o main ./cmd
 
 # Expose port 8080 to the outside world
 EXPOSE 8080
