--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,9 +24,7 @@ WORKDIR /
 # Copy the source from the current directory to the Working Directory inside the container
 COPY . .
 
-# Disable Go Modules
-ENV GO111MODULE=off
-
+RUN go mod download
 # Build the Go app
 RUN go build -o main ./cmd
 
