--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,35 +1,14 @@
 FROM golang:1.22.2
 
-# WORKDIR /
+WORKDIR /app
 
-# COPY . .
-
-# # ENV GO111MODULE=off
-
-# RUN go mod tidy
-# RUN go build -o bin/main ./cmd
-
-# EXPOSE 8080
-
-# CMD ["/bin/main"]
-
-# Start from the latest golang base image
-
-# Add Maintainer Info
-LABEL maintainer="qshiro69@gmail.com"
-
-# Set the Current Working Directory inside the container
-WORKDIR /
-
-# Copy the source from the current directory to the Working Directory inside the container
 COPY . .
 
-RUN go mod download
-# Build the Go app
-RUN go build -o main ./cmd
+ENV GO111MODULE=off
 
-# Expose port 8080 to the outside world
+RUN go mod download
+RUN go build -o bin/main ./cmd
+
 EXPOSE 8080
 
-# Command to run the executable
-CMD ["./main"]
+CMD ["/app/bin/main"]
