chore: update .env and docs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,13 @@
 APP_HOST=0.0.0.0
 APP_PORT=3000
-APP_DEV=true #set false or empty for prod
+APP_DEV=true #set false or empty for production
 APP_WEB=http://localhost:3001
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=password
-DB_NAME=gocrud
-DB_PORT=5432
+DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
+DB_USER=postgres.niqgymfzlntvinurupid
+DB_PASS=KNScryOpoZafLLcc
+DB_NAME=postgres
+DB_PORT=6543
 
 JWT_ACCESS_SECRET=ACCESS
-JWT_REFRESH_SECRET=REFRESH
-
- 
+JWT_REFRESH_SECRET=REFRESH 
